# aegisui

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: COPILOT_INSTRUCTIONS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_codeql_build_dir/: ids_test  layout_test
docs/: HLD.md  LLD.md  NON_GOALS.md  SPEC_API.md  SPEC_EXECUTION.md  SPEC_INVARIANTS.md  SPEC_WIDGET_LIFECYCLE.md
include/aegis/ui/: arena.hpp  grid_node.hpp  ids.hpp  layout.hpp  node.hpp  scene.hpp  scene_builder.hpp  scene_hash.hpp  style.hpp  text_node.hpp
poc/: README.md
poc/crypto_surveillance/: README.md  RESULTS.md  benchmark.hpp  event_log.hpp  main.cpp  state_reducer.hpp  trade_event.hpp  trade_ui.hpp
scripts/: check_api_freeze.sh
src/: scene_builder.cpp
tests/: allocation_guard_test.cpp  arena_test.cpp  determinism_test.cpp  grid_node_test.cpp  ids_test.cpp  layout_test.cpp  link_test.cpp  node_test.cpp  scene_builder_test.cpp  scene_hash_test.cpp  scene_test.cpp  stress_test.cpp  style_test.cpp  text_node_test.cpp
